--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baby Project</title>
+    <title>Baby Poom</title>
 </head>
 <body>
     <div class="conatainer-fluid p-3">
